[project]
name = "mvx-common"
version = "0.1.0"
description = "Common utilities for MVX Python packages."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Vladimir Makarov" }
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mvx/common"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
files = ["src"]
python_version = "3.13"
strict = false
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
mypy_path = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py313"

[tool.ruff.lint]
extend-exclude = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "F841",
  "S101",
  "SLF001",
  "PLR2004",
  "D",
  "ANN",
  "ARG001",
]